name:                implicitcad-template
version:             0.1.0.0
synopsis:            A Stack template that shows how to use the ImplicitCAD Haskell library.
description:         ImplicitCAD (implicitcad.org) is an open-source programmatic CAD library.
license:             Unlicense
license-file:        LICENSE
author:              Jonas Claeson
copyright:           2017 Mokshasoft
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

executable implicitcad-template
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , implicit
  default-language:    Haskell2010

